[package]
name = "hooddl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
futures = "0.3.28"
indicatif = { version = "0.17.6", features = ["tokio", "futures"] }
itertools = "0.11.0"
reqwest = { version = "0.11.20", features = ["cookies"] }
smart-default = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
